--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "seed": "node scripts/firstSeed.js",
+    "seedInstructor": "node scripts/populateInstructors.js"
   },
   "keywords": [],
   "author": "",
